Fix critique issues: links, rubric weights, accessibility, AI tools
- Fix broken README link and GitHub Pages relative paths in docs/
- Add rubric weights (30/20/15/15/10/10) to README and docs
- Clarify word count applies to body text only (not tags/meta)
- Add AI tools section (Copilot, Cursor, Windsurf, ChatGPT/Claude)
- Add accessibility checklist item (alt text, semantic HTML)
- Add git commit guidance with 5-phase example
- Add educational comments to starter AGENTS.md (why values are set)
- Foreshadow future projects in AGENTS.md vocabulary section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <!-- Footer -->
     <footer class="site-footer">
       <p>Design Curator Cards — IS117 Prompt Design</p>
+      <p><small>Built with semantic HTML. All images (if added) should include descriptive <code>alt</code> text.</small></p>
     </footer>
 
   </div>
