--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
       <h2>Bauhaus</h2>
       <p class="date-range">1919–1933</p>
       <div class="card-body">
-        <p>[Your 80–120 word museum-label description goes here. Write with authority — precise vocabulary, no filler. Every sentence should earn its place.]</p>
+        <p>Founded in Weimar, Germany, the Bauhaus school sought to unify diverse artistic disciplines into a Gesamtkunstwerk, "total work of art." The school’s curriculum began with the preliminary course Vorkurs, where students experimented with material properties, primary colors, and geometric abstraction. The Bauhaus discarded historical ornament in favor of Modernism, supporting the principle <em>Form Follows Function</em>, where the aesthetic of an object was determined by its utility. The school moved to Dessau and later Berlin before its closure, leaving a legacy of functionalist design that integrated art into every aspect of modern architecture.</p>
       </div>
       <div class="tags">
-        <span class="tag">[term 1]</span>
-        <span class="tag">[term 2]</span>
-        <span class="tag">[term 3]</span>
-        <span class="tag">[term 4]</span>
-        <span class="tag">[term 5]</span>
+        <span class="tag">Gesamtkunstwerk</span>
+        <span class="tag">Vorkurs</span>
+        <span class="tag">geometric abstraction</span>
+        <span class="tag">Modernism</span>
+        <span class="tag">Form Follows Function</span>
       </div>
       <p class="card-meta links">
         <strong>Examples:</strong>
-        <a href="#">[Source 1]</a> ·
-        <a href="#">[Source 2]</a>
+        <a href="https://whc.unesco.org/en/list/729/">Bauhaus Building Dessau by Walter Gropius (UNESCO)</a>
+        <a href="https://www.moma.org/calendar/exhibitions/303?">MoMA: Bauhaus 1919–1933 Workshops for Modernity</a>
       </p>
       <p class="card-meta confusion">
-        <strong>Not to be confused with</strong> [movement], because [specific reason].
+        <strong>Not to be confused with</strong> Art Deco, because Bauhaus emphasizes industrial utility and the removal of ornament, whereas Art Deco focuses on decorative luxury and extravagance.
       </p>
       <p class="card-meta accountability">
-        <strong>Accountability:</strong> I verified this by checking [source].
+        <strong>Accountability:</strong> I verified this by checking the dates of the Weimar, Dessau, and Berlin phases and the curriculum structure of the Vorkurs by cross-referencing the MoMA 2009 exhibition catalog "Bauhaus 1919–1933: Workshops for Modernity" and the UNESCO World Heritage architectural descriptions for the school sites.
       </p>
     </article>
 
@@ -47,52 +47,54 @@
       <h2>Swiss Style</h2>
       <p class="date-range">International Typographic Style · 1950s–1970s</p>
       <div class="card-body">
-        <p>[Your 80–120 word museum-label description goes here.]</p>
+        <p>Emerging in Switzerland and Germany, the Swiss Style—also known as the International Typographic Style—refined the principles of the Bauhaus into a rational and mathematical design language. Central to this movement was a strict grid system utilized to organize content, ensuring a consistent visual hierarchy across diverse media. Swiss Style championed visual harmony through asymmetrical balance, placing elements with intentional weight rather than mirroring them. Designers incorporated objective photography and sans-serif typefaces such as Helvetica to emphasize logic and legibility over subjective artistic expression. The movement achieved a clean, structured aesthetic, becoming the international standard for corporate and universal communication.
+</p>
       </div>
       <div class="tags">
-        <span class="tag">[term 1]</span>
-        <span class="tag">[term 2]</span>
-        <span class="tag">[term 3]</span>
-        <span class="tag">[term 4]</span>
-        <span class="tag">[term 5]</span>
+        <span class="tag">grid system</span>
+        <span class="tag">visual hierarchy</span>
+        <span class="tag">asymmetrical balance</span>
+        <span class="tag">objective photography</span>
+        <span class="tag">Helvetica</span>
       </div>
       <p class="card-meta links">
         <strong>Examples:</strong>
-        <a href="#">[Source 1]</a> ·
+        <a href="https://medium.com/fgd1-the-archive/beethoven-poster-by-josef-muller-brockmann-ce06940edf74">Beethoven Poster Analysis (The Archive)</a> ·
         <a href="#">[Source 2]</a>
       </p>
       <p class="card-meta confusion">
-        <strong>Not to be confused with</strong> [movement], because [specific reason].
+        <strong>Not to be confused with</strong> Minimalism, because Swiss Style is a specific communication methodology based on mathematical grids, while Minimalism is a broader aesthetic of reduction.
       </p>
       <p class="card-meta accountability">
-        <strong>Accountability:</strong> I verified this by checking [source].
+        <strong>Accountability:</strong> I verified this by checking The Archive (FGD1) analysis of the "Beethoven" poster by Josef Muller-Brockmann that catalogs a specific use of a circular grid that the movement uses for their mathematical placements, and the Cooper Hewitt "Harmony of Contrasts" article, which validates Armin Hofmann’s role in establishing the movement's focus on objective, simplified forms.
+.
       </p>
     </article>
 
     <!-- Card 3: Reaction (choose New Wave OR Grunge) -->
     <article class="curator-card">
-      <h2>[New Wave Typography OR Grunge Typography]</h2>
-      <p class="date-range">[Date range]</p>
+      <h2>New Wave Typography</h2>
+      <p class="date-range">1970s–1980s</p>
       <div class="card-body">
-        <p>[Your 80–120 word museum-label description goes here.]</p>
+        <p>Emerged from the Basel School of Design in Switzerland, New Wave Typography emerged as a Postmodernism reaction against the rigid constraints of the Swiss Style. While it maintained a foundation in Swiss design, it sought to break the rules of its predecessor. Designers abandoned the "less is more" philosophy by using a deconstructed grid to create intentional visual tension and convoluted compositions that challenge viewers’ perception. The movement embraced layering typography, often overlapping text and graphics to build depth. By integrating irregular letterspacing and mixed typeweights, designers moved away from neutrality toward expressive, jagged visual rhythms. This shift prioritized individual interpretation and subjectivity over the sterile, logical systems of earlier modern design.</p>
       </div>
       <div class="tags">
-        <span class="tag">[term 1]</span>
-        <span class="tag">[term 2]</span>
-        <span class="tag">[term 3]</span>
-        <span class="tag">[term 4]</span>
-        <span class="tag">[term 5]</span>
+        <span class="tag">Postmodernism</span>
+        <span class="tag">deconstructed grid</span>
+        <span class="tag">layering typography</span>
+        <span class="tag">irregular letterspacing</span>
+        <span class="tag">mixed typeweight</span>
       </div>
       <p class="card-meta links">
         <strong>Examples:</strong>
-        <a href="#">[Source 1]</a> ·
-        <a href="#">[Source 2]</a>
+        <a href="https://collections.vam.ac.uk/item/O1155283/kunsthalle-basel-kunstkredit-76-77-poster-weingart-wolfgang/">Kunstkredit 76/77 Poster by Wolfgang Weingart (V&A)</a> ·
+        <a href="https://www.moma.org/collection/works/172729">Does It Make Sense? by April Greiman (MoMA)</a>
       </p>
       <p class="card-meta confusion">
-        <strong>Not to be confused with</strong> [movement], because [specific reason].
+        <strong>Not to be confused with</strong> Grunge Typography, because New Wave specifically subverts professional Swiss design principles through technical deconstruction, whereas Grunge is a total rejection of professional typesetting.
       </p>
       <p class="card-meta accountability">
-        <strong>Accountability:</strong> I verified this by checking [source].
+        <strong>Accountability:</strong> I verified this by checking checking the V&A Museum archives, which describe how Wolfgang Weingart utilized his teaching position at the Basel School of Design to lead a "rebellion" against the Swiss grid, creating New Wave, and the MoMA entry for Greiman’s "Does It Make Sense?", which confirms the movement's move into element layering and the deconstruction of traditional page layouts.
       </p>
     </article>
 
