Made some small fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header class="site-header">
       <h1>Design Curator Cards</h1>
-      <p class="subtitle">Three movements. Three labels. One page.</p>
+      <p class="subtitle">By Alex Revilla</p>
     </header>
 
     <!-- Card 1: Bauhaus -->
@@ -31,7 +31,7 @@
       </div>
       <p class="card-meta links">
         <strong>Examples:</strong>
-        <a href="https://whc.unesco.org/en/list/729/">Bauhaus Building Dessau by Walter Gropius (UNESCO)</a>
+        <a href="https://whc.unesco.org/en/list/729/">Bauhaus Building Dessau by Walter Gropius (UNESCO)</a> ·
         <a href="https://www.moma.org/collection/works/407820">Arieh Sharon's Drawing from Paul Klee's Bauhaus preliminary course (MoMA)</a>
       </p>
       <p class="card-meta confusion">
